* Added section reordering (Fixes #4)
* Added index to tables to make querying faster on the frontend (Fixes #1)
* Added password hashing for insecure hosts.  (Fixes #11)
* Added content types to content creation and editing (Fixes #5)
* Added the link content type
* Added proper 404 error for pages that are not found or active (Fixes #18)
* Changed database abstraction so that it will be able to use other db
backends in the future (Fixes #19)

Version 0.2.1 -- Tue Jul 13 2004
-----------------

* Added GetText.php to work with systems even without gettext support in php
* Added gettext functionality to all admin pages
* Added some missing mysql_free_result functions
* Added preview functionality for adding and editing content and templates
* Changed content url entries to automatically be lowercase with no odd chars
* Changed admin login page so username field gets focus on load
* Changed install.php so that it removes the test files created on page 1
* Fixed editing content so that changing sections does not mess up ordering
* Fixed the install script so that it works correctly on Win32 platforms
* Moved stylesheets to display inline instead of from separate script
* Moved menu generation code out of the bulletmenu plugin

Version 0.2 -- Mon Jul 05 2004
-----------------

* Added content reordering
* Added ability to let additional users modify content on a particular page
* Added note to show if a template or section is still being used before it is
deleted
* Added a cms_version plugin
* Added an upgrade.php
* Added a title to the admin pages
* Added an UPGRADE document
* Fixed a security hole where incactive pages can still be called by URL
* Fixed a bug in show in menu in both admin and bulletmenu
* Fixed up install.php to fit the look of the admin seciton
* Fixed the footer plugin to not have multiple divs
* Fixed the wording of INSTALL to match the text in install.php
* Fixed it so users can change their own password