@@ -24,15 +24,27 @@ $group_id = -1;
 if (isset($_GET["group_id"])) {
 
 	$group_id = $_GET["group_id"];
+	$group_name = "";
 	$userid = get_userid();
 	$access = check_permission($config, $userid, 'Remove Group');
 
 	if ($access) {
 		$db = new DB($config);
 
+		$query = "SELECT group_name FROM ".$config->db_prefix."groups WHERE group_id = ".$group_id;
+		$result = $db->query($query);
+
+		if ($db->rowcount($result) > 0) {
+			$row = $db->getresulthash($result);
+			$group_name = $row[group_name];
+		}
+
+		$db->freeresult($result);
+
 		$query = "DELETE FROM ".$config->db_prefix."groups where group_id = $group_id";
 		$result = $db->query($query);
 		$db->close();
+		audit($config, $_SESSION["cms_admin_user_id"], $_SESSION["cms_admin_username"], $group_id, $group_name, 'Deleted Group');
 	}
 }
 
