@@ -12,6 +12,7 @@ GetText::reset();
 <a href="listtemplates.php"><?=GetText::gettext("Template Management")?></a>
 <a href="listusers.php"><?=GetText::gettext("User Management")?></a>
 <a href="listgroups.php"><?=GetText::gettext("Group Management")?></a>
+<a href="adminlog.php"><?=GetText::gettext("Admin Log")?></a>
 <a href="../index.php" target="_new"><?=GetText::gettext("Show Site")?></a>
 <a href="logout.php"><?=GetText::gettext("Logout")?></a>
 </div> 
